{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 21,
  "lineage": "65e7fa9a-4035-3391-d109-39920e3a4545",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07251f912d2a831a3",
            "arn": "arn:aws:ec2:us-east-2:733026618622:instance/i-0902d4b15ae31a8fe",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0902d4b15ae31a8fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-022d79b52f7a716de",
            "private_dns": "ip-10-20-20-14.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.14",
            "public_dns": "ec2-18-188-191-11.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.191.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-047468065d097e3f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bcb2f57c5ae1bee",
            "tags": {
              "Name": "app-server-1"
            },
            "tags_all": {
              "Name": "app-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c182b4fd7ea18a60"
            ]
          },
          "dependencies": [
            "aws_security_group.http-sg",
            "aws_subnet.private-2a",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07251f912d2a831a3",
            "arn": "arn:aws:ec2:us-east-2:733026618622:instance/i-0dc6b1e1bb087e782",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc6b1e1bb087e782",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01fb9e2c9641f73d7",
            "private_dns": "ip-10-20-20-29.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.29",
            "public_dns": "ec2-3-144-168-20.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.168.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05078c884424c08db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0590599b89926d12a",
            "tags": {
              "Name": "app-server-2"
            },
            "tags_all": {
              "Name": "app-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c182b4fd7ea18a60"
            ]
          },
          "dependencies": [
            "aws_security_group.http-sg",
            "aws_subnet.private-2b",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07251f912d2a831a3",
            "arn": "arn:aws:ec2:us-east-2:733026618622:instance/i-0851f7544ea1e8724",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0851f7544ea1e8724",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0711f743159ac7803",
            "private_dns": "ip-10-20-20-36.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.36",
            "public_dns": "ec2-18-222-55-206.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.55.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fc72a2748bc12ed4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8ce44ce8bae30b9",
            "tags": {
              "Name": "app-server-3"
            },
            "tags_all": {
              "Name": "app-server-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c182b4fd7ea18a60"
            ]
          },
          "dependencies": [
            "aws_security_group.http-sg",
            "aws_subnet.private-2c",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:internet-gateway/igw-0b37d5212f3c18dd1",
            "id": "igw-0b37d5212f3c18dd1",
            "owner_id": "733026618622",
            "tags": {
              "Name": "Application-1-gateway"
            },
            "tags_all": {
              "Name": "Application-1-gateway"
            },
            "vpc_id": "vpc-03ddbb51ac927e23a"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:loadbalancer/app/front/8f53e72227330ec2",
            "arn_suffix": "app/front/8f53e72227330ec2",
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-1436456471.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:733026618622:loadbalancer/app/front/8f53e72227330ec2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c182b4fd7ea18a60"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0590599b89926d12a"
              },
              {
                "subnet_id": "subnet-08bcb2f57c5ae1bee"
              },
              {
                "subnet_id": "subnet-0b8ce44ce8bae30b9"
              }
            ],
            "subnets": [
              "subnet-0590599b89926d12a",
              "subnet-08bcb2f57c5ae1bee",
              "subnet-0b8ce44ce8bae30b9"
            ],
            "tags": {
              "Environment": "front"
            },
            "tags_all": {
              "Environment": "front"
            },
            "vpc_id": "vpc-03ddbb51ac927e23a",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.http-sg",
            "aws_subnet.private-2a",
            "aws_subnet.private-2b",
            "aws_subnet.private-2c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:listener/app/front/8f53e72227330ec2/3cbd3df875be72ee",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/fe286fbfd1d7c507",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:733026618622:listener/app/front/8f53e72227330ec2/3cbd3df875be72ee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:loadbalancer/app/front/8f53e72227330ec2",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front",
            "aws_lb_target_group.front",
            "aws_security_group.http-sg",
            "aws_subnet.private-2a",
            "aws_subnet.private-2b",
            "aws_subnet.private-2c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/fe286fbfd1d7c507",
            "arn_suffix": "targetgroup/application-front/fe286fbfd1d7c507",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/fe286fbfd1d7c507",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "application-front",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03ddbb51ac927e23a"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-app1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/fe286fbfd1d7c507-20230114061028713700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/fe286fbfd1d7c507",
            "target_id": "i-0902d4b15ae31a8fe"
          },
          "dependencies": [
            "aws_instance.app-server1",
            "aws_lb_target_group.front",
            "aws_security_group.http-sg",
            "aws_subnet.private-2a",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-app2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/fe286fbfd1d7c507-20230114061039936300000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/fe286fbfd1d7c507",
            "target_id": "i-0dc6b1e1bb087e782"
          },
          "dependencies": [
            "aws_instance.app-server2",
            "aws_lb_target_group.front",
            "aws_security_group.http-sg",
            "aws_subnet.private-2b",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-app3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/fe286fbfd1d7c507-20230114061028893900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:733026618622:targetgroup/application-front/fe286fbfd1d7c507",
            "target_id": "i-0851f7544ea1e8724"
          },
          "dependencies": [
            "aws_instance.app-server3",
            "aws_lb_target_group.front",
            "aws_security_group.http-sg",
            "aws_subnet.private-2c",
            "aws_vpc.this",
            "data.aws_ami.amazon_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b37d5212f3c18dd1",
            "id": "r-rtb-05f666359e0651cb01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05f666359e0651cb0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this-igw",
            "aws_route_table.this-rt",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:route-table/rtb-05f666359e0651cb0",
            "id": "rtb-05f666359e0651cb0",
            "owner_id": "733026618622",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Application-1-route-table"
            },
            "tags_all": {
              "Name": "Application-1-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ddbb51ac927e23a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06cbf3f3725c92869",
            "route_table_id": "rtb-05f666359e0651cb0",
            "subnet_id": "subnet-08bcb2f57c5ae1bee"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.private-2a",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f76bb327d40d2921",
            "route_table_id": "rtb-05f666359e0651cb0",
            "subnet_id": "subnet-0590599b89926d12a"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.private-2b",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0296dcad73bb2d4c1",
            "route_table_id": "rtb-05f666359e0651cb0",
            "subnet_id": "subnet-0b8ce44ce8bae30b9"
          },
          "dependencies": [
            "aws_route_table.this-rt",
            "aws_subnet.private-2c",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:security-group/sg-0c182b4fd7ea18a60",
            "description": "allow inbound http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c182b4fd7ea18a60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "from my ip range",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_access",
            "name_prefix": "",
            "owner_id": "733026618622",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Application-1-sg"
            },
            "tags_all": {
              "Name": "Application-1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ddbb51ac927e23a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:subnet/subnet-08bcb2f57c5ae1bee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.20.20.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bcb2f57c5ae1bee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733026618622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-1-private-2a"
            },
            "tags_all": {
              "Name": "Application-1-private-2a"
            },
            "vpc_id": "vpc-03ddbb51ac927e23a"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:subnet/subnet-0590599b89926d12a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.20.20.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0590599b89926d12a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733026618622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-1-private-2b"
            },
            "tags_all": {
              "Name": "Application-1-private-2b"
            },
            "vpc_id": "vpc-03ddbb51ac927e23a"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:subnet/subnet-0b8ce44ce8bae30b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.20.20.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8ce44ce8bae30b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733026618622",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-1-private-2c"
            },
            "tags_all": {
              "Name": "Application-1-private-2c"
            },
            "vpc_id": "vpc-03ddbb51ac927e23a"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:733026618622:vpc/vpc-03ddbb51ac927e23a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.20.0/26",
            "default_network_acl_id": "acl-06e9d8898e904a38a",
            "default_route_table_id": "rtb-0be066c7436be45d7",
            "default_security_group_id": "sg-02b5b4d1be9c959ff",
            "dhcp_options_id": "dopt-02d31a5d210bcf2db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ddbb51ac927e23a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be066c7436be45d7",
            "owner_id": "733026618622",
            "tags": {
              "Name": "Application-1"
            },
            "tags_all": {
              "Name": "Application-1"
            }
          }
        }
      ]
    }
  ]
}